# fastapi-depends-ext

./: README.md  pyproject.toml
fastapi_depends_ext/: __init__.py  depends.py  utils.py
tests/: conftest.py  utils_for_tests.py
tests/depends/depends_attr/: test_bind.py
tests/depends/depends_attr_binder/: test_bind.py  test_init.py
tests/depends/depends_ext/: test_bind.py
tests/depends/depends_method/: test_bind.py
tests/depends/depends_method_binder/: test_bind.py
tests/utils/: test_get_base_class.py  test_get_super_for_method.py  test_patch_defaults.py
