[tool.poetry]
name = "fastapi-depends-ext"
version = "0.1.3"
description = "Extends FastAPI Depends classes to simple way of modifying them after creating"
authors = ["Nikakto <mcgish@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8 <4.0"
fastapi = ">=0.70.0 <1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
nest-asyncio = "^1.5.6"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''